# snf-mcp

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: query.py  schema.py
app/core/: config.py  logging.py
app/services/: snowflake.py
